syntax = "proto3";
option go_package = "github/pwera/grpc-micros/grpc";
import "validator.proto";

message CreateOrderRequest {
  int32 user_id = 1 [(validator.field) = {int_gt: 0, int_lt: 10000}];
  repeated Item items = 2;
  float total_price = 3[(validator.field) = {int_gt: 0}];
}

message Item {
  int32 name = 1;
  string product_code = 2 [(validator.field) = {string_not_empty: true}];
  int32 quantity = 3;
  float unit_price = 4;
}

message CreateOrderResponse {
  int32 order_id = 1;
}

service Order {
  rpc Create(CreateOrderRequest) returns (CreateOrderResponse){}
}